--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
 # The database connection URL
-spring.datasource.url=jdbc:mysql://localhost:3306/gastos_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/gastos_db?autoReconnect=true&useSSL=false&createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
 
 # Username
 spring.datasource.username=root
